Add pug client templates, and settings(gulp, npm)

--- a/src/html/includes/_histories.pug
+++ b/src/html/includes/_histories.pug
@@ -1,127 +1,2 @@
 section.l-histories(aria-label="履歴の一覧")
-  ul.l-histories-list
-    li
-      section.l-histories-list-card-container
-        button.l-histories-list-card(type="button")
-          div.l-histories-list-card-left
-            div.l-histories-list-img-container
-              img(src="https://via.placeholder.com/150")
-          div.l-histories-list-card-right
-            div.l-histories-list-card-right-container
-              div.l-histories-list-card-right-top
-                div.l-histories-list-card-right-top-title
-                  h2
-                    span マーケティング部 - 日報
-                    |  で返信を書きました
-                div.l-histories-list-card-right-top-body
-                  p ■本日の業務 10:00-12:00 ミーティング Recoverさんと13:00-14:00 営業先…
-              div.l-histories-list-card-right-bottom
-                div.l-histories-list-card-right-bottom-container
-                  div.l-histories-list-card-right-bottom-left
-                    div.l-histories-list-card-right-bottom-left-tag
-                      span スレッド / 返信
-                  div.l-histories-list-card-right-bottom-right
-                    div.l-histories-list-card-right-bottom-right-time
-                      span 2時間前
-        button.l-histories-list-card-option-menu
-        div.l-histories-list-card-shadow
-    li
-      section.l-histories-list-card-container
-        button.l-histories-list-card(type="button")
-          div.l-histories-list-card-left
-            div.l-histories-list-img-container
-              img(src="https://via.placeholder.com/150")
-          div.l-histories-list-card-right
-            div.l-histories-list-card-right-container
-              div.l-histories-list-card-right-top
-                div.l-histories-list-card-right-top-title
-                  h2
-                    span マーケティング部 - 日報
-                    |  で返信を書きました
-                div.l-histories-list-card-right-top-body
-                  p ■本日の業務 10:00-12:00 ミーティング Recoverさんと13:00-14:00 営業先…
-              div.l-histories-list-card-right-bottom
-                div.l-histories-list-card-right-bottom-container
-                  div.l-histories-list-card-right-bottom-left
-                    div.l-histories-list-card-right-bottom-left-tag
-                      span スレッド / 返信
-                  div.l-histories-list-card-right-bottom-right
-                    div.l-histories-list-card-right-bottom-right-time
-                      span 2時間前
-        button.l-histories-list-card-option-menu
-        div.l-histories-list-card-shadow
-    li
-      section.l-histories-list-card-container
-        button.l-histories-list-card(type="button")
-          div.l-histories-list-card-left
-            div.l-histories-list-img-container
-              img(src="https://via.placeholder.com/150")
-          div.l-histories-list-card-right
-            div.l-histories-list-card-right-container
-              div.l-histories-list-card-right-top
-                div.l-histories-list-card-right-top-title
-                  h2
-                    span マーケティング部 - 日報
-                    |  で返信を書きました
-                div.l-histories-list-card-right-top-body
-                  p ■本日の業務 10:00-12:00 ミーティング Recoverさんと13:00-14:00 営業先…
-              div.l-histories-list-card-right-bottom
-                div.l-histories-list-card-right-bottom-container
-                  div.l-histories-list-card-right-bottom-left
-                    div.l-histories-list-card-right-bottom-left-tag
-                      span スレッド / 返信
-                  div.l-histories-list-card-right-bottom-right
-                    div.l-histories-list-card-right-bottom-right-time
-                      span 2時間前
-        button.l-histories-list-card-option-menu
-        div.l-histories-list-card-shadow
-    li
-      section.l-histories-list-card-container
-        button.l-histories-list-card(type="button")
-          div.l-histories-list-card-left
-            div.l-histories-list-img-container
-              img(src="https://via.placeholder.com/150")
-          div.l-histories-list-card-right
-            div.l-histories-list-card-right-container
-              div.l-histories-list-card-right-top
-                div.l-histories-list-card-right-top-title
-                  h2
-                    span マーケティング部 - 日報
-                    |  で返信を書きました
-                div.l-histories-list-card-right-top-body
-                  p ■本日の業務 10:00-12:00 ミーティング Recoverさんと13:00-14:00 営業先…
-              div.l-histories-list-card-right-bottom
-                div.l-histories-list-card-right-bottom-container
-                  div.l-histories-list-card-right-bottom-left
-                    div.l-histories-list-card-right-bottom-left-tag
-                      span スレッド / 返信
-                  div.l-histories-list-card-right-bottom-right
-                    div.l-histories-list-card-right-bottom-right-time
-                      span 2時間前
-        button.l-histories-list-card-option-menu
-        div.l-histories-list-card-shadow
-    li
-      section.l-histories-list-card-container
-        button.l-histories-list-card(type="button")
-          div.l-histories-list-card-left
-            div.l-histories-list-img-container
-              img(src="https://via.placeholder.com/150")
-          div.l-histories-list-card-right
-            div.l-histories-list-card-right-container
-              div.l-histories-list-card-right-top
-                div.l-histories-list-card-right-top-title
-                  h2
-                    span マーケティング部 - 日報
-                    |  で返信を書きました
-                div.l-histories-list-card-right-top-body
-                  p ■本日の業務 10:00-12:00 ミーティング Recoverさんと13:00-14:00 営業先…
-              div.l-histories-list-card-right-bottom
-                div.l-histories-list-card-right-bottom-container
-                  div.l-histories-list-card-right-bottom-left
-                    div.l-histories-list-card-right-bottom-left-tag
-                      span スレッド / 返信
-                  div.l-histories-list-card-right-bottom-right
-                    div.l-histories-list-card-right-bottom-right-time
-                      span 2時間前
-        button.l-histories-list-card-option-menu
-        div.l-histories-list-card-shadow
+  ul#l-histories-list.l-histories-list
