--- a/src/html/includes/_header.pug
+++ b/src/html/includes/_header.pug
@@ -1,3 +1,3 @@
 header.l-header
   h1.l-header-title タイムライン
-  span.l-header-available-count 256個のアクティビティ
+  span#l-header-available-count.l-header-available-count
