--- a/src/styles/layout/_histories.css
+++ b/src/styles/layout/_histories.css
@@ -13,6 +13,10 @@
     margin-bottom: 1.5rem;
 }
 
+.l-histories-list li:last-child {
+    margin-bottom: 3rem;
+}
+
 /* === Card Style === */
 .l-histories-list-card-container {
     position: relative;
@@ -22,7 +26,6 @@
     display: flex;
     flex-direction: row;
     padding: 0;
-    height: var(--popup-card-height);
     width: var(--popup-card-width);
     border-color: transparent;
     border-radius: 10px;
@@ -36,29 +39,26 @@
 
 .l-histories-list-card-shadow {
     position: absolute;
-    content: '';
-    padding: 0;
     top: 0;
     left: 0;
-    height: 190px;
     width: var(--popup-card-width);
+    height: 100%;
     background-color: #060606;
-    opacity: .15;
-    transform: scale(0.93) translateY(0.7rem) translateZ(-1rem);
+    opacity: .2;
+    transform: scale(.93) translateY(.5rem) translateZ(-1rem);
     filter: blur(1rem);
     z-index: -1;
-    transition: all 150ms 0s ease;;
+    transition: all 50ms 0s ease;
 }
 
 .l-histories-list-card-container:hover .l-histories-list-card-shadow,
 .l-histories-list-card-container:focus .l-histories-list-card-shadow {
-    transform: scale(1) translateY(0.7rem) translateZ(-1rem);
+    transform: scale(.98) translateY(.7rem) translateZ(-1rem);
 }
 
 /* Card Left Style */
 .l-histories-list-card-left {
-    width: 15%;
-    margin: 1rem 1rem 1rem 1.25rem;
+    padding: 1rem 1rem 1rem 1.25rem;
 }
 
 .l-histories-list-img-container {
@@ -84,7 +84,8 @@
 
 .l-histories-list-card-right-top {
     height: 70%;
-    margin: 1.15rem 1.6rem 0 0;
+    min-height: 5rem;
+    padding: 1rem 1.3rem 0 0;
 }
 
 .l-histories-list-card-right-top-title h2 {
@@ -119,17 +120,19 @@
     display: flex;
     flex-direction: row;
     height: 100%;
+    padding: .7rem 0;
 }
 
 .l-histories-list-card-right-bottom-left {
-    margin: .7rem 0;
     width: 50%;
 }
 
 .l-histories-list-card-right-bottom-left-tag {
-    position: relative;
     display: inline-block;
-    padding: .2rem .7rem .3rem 1.9rem;
+    position: relative;
+    min-width: 5rem;
+    height: 2rem;
+    padding: .26rem .7rem .25rem 1.9rem;
     font-size: .8rem;
     font-family: "Noto Sans CJK JP Medium", sans-serif;
     color: var(--popup-card-tag-color);
@@ -141,7 +144,7 @@
 .l-histories-list-card-right-bottom-left-tag::before {
     position: absolute;
     content: "";
-    top: .5rem;
+    top: .55rem;
     left: .75rem;
     width: .7rem;
     height: .7rem;
@@ -150,7 +153,6 @@
 }
 
 .l-histories-list-card-right-bottom-right {
-    margin: .7rem 0;
     width: 50%;
 }
 
@@ -158,7 +160,7 @@
     position: relative;
     margin: .35rem 0 0 2.25rem;
     font-size: .8rem;
-    font-family: "Noto Sans CJK JP Regular", sans-serif;
+    font-family: "Noto Sans CJK JP Medium", sans-serif;
     letter-spacing: .05rem;
     color: var(--popup-card-time-color);
 }
@@ -174,31 +176,34 @@
     background-size: cover;
 }
 
-.l-histories-list-card-option-menu {
-    position: absolute;
-    bottom: 1.46rem;
-    right: 1.5rem;
-    height: 1rem;
-    width: 1rem;
-    background: url("../images/popup/menu.svg") no-repeat;
-    background-size: cover;
-    border: none;
-    opacity: 0;
-    transition: all 150ms 0s ease;
+.l-histories-list-card-remove-container {
+    position: relative;
 }
 
-.l-histories-list-card-container:hover .l-histories-list-card-option-menu,
-.l-histories-list-card:focus ~ .l-histories-list-card-option-menu,
-.l-histories-list-card-option-menu:focus {
+.l-histories-list-card-remove {
+    position: absolute;
+    bottom: 1.05rem;
+    right: 1.5rem;
+    height: 1.5rem;
+    width: 1.5rem;
+    border: none;
+    opacity: 0;
+}
+
+.l-histories-list-card-container:hover .l-histories-list-card-remove,
+.l-histories-list-card:focus .l-histories-list-card-remove,
+.l-histories-list-card-remove:focus {
     opacity: 1;
 }
 
-.l-histories-list-card-option-menu:focus {
-    outline: 5px auto -webkit-focus-ring-color;
-    transition: none;
+.l-histories-list-card-remove-svg .icon-trash {
+    position: absolute;
+    top: .2rem;
+    right: .2rem;
+    height: 1.1rem;
+    width: 1.15rem;
 }
 
-.l-histories-list-card-option-menu:hover {
-    cursor: pointer;
-    transition: none;
+.l-histories-list-card-remove-svg .icon-trash-path {
+    fill: #B0BEC5;
 }
