--- a/src/html/includes/_histories.pug
+++ b/src/html/includes/_histories.pug
@@ -1,2 +1,1 @@
-section.l-histories(aria-label="履歴の一覧")
-  ul#l-histories-list.l-histories-list
+section#l-histories.l-histories(aria-label="履歴の一覧")
