--- a/src/styles/popup.css
+++ b/src/styles/popup.css
@@ -8,4 +8,5 @@
 /* layouts */
 @import "layout/_header.css";
 @import "layout/_histories.css";
+@import "layout/_empty-histories.css";
 /* modules */
