--- a/src/styles/base/_base.css
+++ b/src/styles/base/_base.css
@@ -1,9 +1,13 @@
+html, body{
+    min-height: 100%;
+    height: 100%;
+}
+
 html {
     background-color: var(--popup-body-background-color);
 }
 
 body {
-    min-height: var(--popup-body-height);
     min-width: var(--popup-body-width);
     background-color: transparent;
 }
