--- a/src/styles/layout/_empty-histories.css
+++ b/src/styles/layout/_empty-histories.css
@@ -1,7 +1,7 @@
 .l-histories-empty-container {
     width: 100%;
     height: 100%;
-    margin: 2rem 0;
+    margin: 0 0 8rem 0;
     text-align: center;
 }
 
