--- a/src/styles/layout/_histories.css
+++ b/src/styles/layout/_histories.css
@@ -61,14 +61,11 @@
     padding: 1rem 1rem 1rem 1.25rem;
 }
 
-.l-histories-list-img-container {
-
-}
-
 .l-histories-list-img-container img {
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    object-fit: cover;
 }
 
 /* Card Right Style */
