--- a/src/styles/layout/_histories.css
+++ b/src/styles/layout/_histories.css
@@ -105,7 +105,7 @@
     font-size: 0.75rem;
     font-family: "Noto Sans CJK JP Regular", sans-serif;
     color: var(--popup-card-body-color);
-    letter-spacing: .08rem;
+    letter-spacing: .03rem;
 }
 
 .l-histories-list-card-right-bottom {
@@ -129,9 +129,9 @@
     position: relative;
     min-width: 5rem;
     height: 2rem;
-    padding: .26rem .7rem .25rem 1.9rem;
+    padding: .2rem .7rem .25rem 1.9rem;
     font-size: .8rem;
-    font-family: "Noto Sans CJK JP Regular", sans-serif;
+    font-family: "Noto Sans CJK JP Medium", sans-serif;
     color: var(--popup-card-tag-color);
     letter-spacing: .03rem;
     border: 2px solid var(--popup-card-tag-border-color);
@@ -157,7 +157,7 @@
     position: relative;
     margin: .35rem 0 0 2.25rem;
     font-size: .8rem;
-    font-family: "Noto Sans CJK JP Regular", sans-serif;
+    font-family: "Noto Sans CJK JP Medium", sans-serif;
     letter-spacing: .05rem;
     color: var(--popup-card-time-color);
 }
