--- a/src/html/client/_client_histories_template.pug
+++ b/src/html/client/_client_histories_template.pug
@@ -17,9 +17,11 @@ ul#l-histories-list.l-histories-list
                         |  で本文を書きました
                       when "Thread.Reply"
                         |  で返信を書きました
-                      when "People"
+                      when "People.Body"
+                        |  で本文を書きました
+                      when "People.Reply"
                         |  で投稿しました
-                      when "Message"
+                      when "Message.Body"
                         |  で送信しました
                       default
                         |  でのアクティビティ
@@ -35,10 +37,12 @@ ul#l-histories-list.l-histories-list
                             | スレッド / 本文
                           when "Thread.Reply"
                             | スレッド / 返信
-                          when "People"
-                            | ピープル
-                          when "Message"
-                            | メッセージ
+                          when "People.Body"
+                            | ピープル / 本文
+                          when "People.Reply"
+                            | ピープル / 返信
+                          when "Message.Body"
+                            | メッセージ / 本文
                           default
                             | 不明
                   div.l-histories-list-card-right-bottom-right
