--- a/src/styles/layout/_histories.css
+++ b/src/styles/layout/_histories.css
@@ -87,13 +87,15 @@
 
 .l-histories-list-card-right-top-title h2 {
     font-size: .9rem;
-    font-family: "Noto Sans CJK JP Light", sans-serif;
+    font-family: "Noto Sans JP", sans-serif;
+    font-weight: 300;
     color: var(--popup-card-title-color);
 }
 
 .l-histories-list-card-right-top-title h2 span {
     margin-right: 1px;
-    font-family: "Noto Sans CJK JP Bold", sans-serif;
+    font-family: "Noto Sans JP", sans-serif;
+    font-weight: 700;
 }
 
 .l-histories-list-card-right-top-body {
@@ -103,7 +105,8 @@
 .l-histories-list-card-right-top-body p {
     margin: 0;
     font-size: 0.75rem;
-    font-family: "Noto Sans CJK JP Regular", sans-serif;
+    font-family: "Noto Sans JP", sans-serif;
+    font-weight: 500;
     color: var(--popup-card-body-color);
     letter-spacing: .03rem;
 }
@@ -131,7 +134,8 @@
     height: 2rem;
     padding: .2rem .7rem .25rem 1.9rem;
     font-size: .8rem;
-    font-family: "Noto Sans CJK JP Medium", sans-serif;
+    font-family: "Noto Sans JP", sans-serif;
+    font-weight: 500;
     color: var(--popup-card-tag-color);
     letter-spacing: .03rem;
     border: 2px solid var(--popup-card-tag-border-color);
@@ -157,7 +161,8 @@
     position: relative;
     margin: .35rem 0 0 2.25rem;
     font-size: .8rem;
-    font-family: "Noto Sans CJK JP Medium", sans-serif;
+    font-family: "Noto Sans JP", sans-serif;
+    font-weight: 500;
     letter-spacing: .05rem;
     color: var(--popup-card-time-color);
 }
