Migrate to ES6 with webpack

--- a/src/html/includes/_script.pug
+++ b/src/html/includes/_script.pug
@@ -1,6 +1,2 @@
 block js
-  script(src="../vendors/jquery-3.2.1.min.js")
-  script(src="../vendors/moment-with-locales.min.js")
-  script(src="../js/templates/histories.min.js")
-  script(src="../js/templates/histories_empty.min.js")
-  script(src="../js/popup.min.js")
+  script(src="../js/popup.js")
