--- a/src/templates/histories.pug
+++ b/src/templates/histories.pug
@@ -51,5 +51,5 @@ ul#l-histories-list.l-histories-list
         div.l-histories-list-card-remove-container
           button.l-histories-list-card-remove
             div.l-histories-list-card-remove-svg(href=history.url)
-              include ../../images/popup/trash.svg
+              include ../images/popup/trash.svg
         div.l-histories-list-card-shadow
