--- a/src/styles/layout/_histories.css
+++ b/src/styles/layout/_histories.css
@@ -131,7 +131,7 @@
     display: inline-block;
     position: relative;
     min-width: 5rem;
-    height: 2rem;
+    min-height: 2rem;
     padding: .2rem .7rem .25rem 1.9rem;
     font-size: .8rem;
     font-family: "Noto Sans JP", sans-serif;
