--- a/src/templates/histories.pug
+++ b/src/templates/histories.pug
@@ -23,6 +23,8 @@ ul#l-histories-list.l-histories-list
                         |  で投稿しました
                       when "Message.Body"
                         |  で送信しました
+                      when "Record.Body"
+                        |  でコメントしました
                       default
                         |  でのアクティビティ
                 div.l-histories-list-card-right-top-body
@@ -43,6 +45,8 @@ ul#l-histories-list.l-histories-list
                             | ピープル / 返信
                           when "Message.Body"
                             | メッセージ / 本文
+                          when "Record.Body"
+                            | アプリ / コメント
                           default
                             | 不明
                   div.l-histories-list-card-right-bottom-right
