Fixed clickable range of restore button

--- a/src/templates/recovery-button.pug
+++ b/src/templates/recovery-button.pug
@@ -2,4 +2,4 @@ div#oceanMaimodorun.goog-inline-block.goog-toolbar-button.ocean-ui-editor-toolba
   div.goog-inline-block.goog-toolbar-button-outer-box
     div.goog-inline-block.goog-toolbar-button-inner-box.goog-toolbar-button-inner-box-maimodorun
       div.ocean-ui-editor-toolbar-maimodorun-button
-        img.maimodorun-button(src=iconImgSrc)
+        img.maimodorun-button-img(src=iconImgSrc)
